# tauri-plugin-sentry

./: Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
.github/workflows/: test.yml
examples/sentry-integration/: package.json  pnpm-lock.yaml
examples/sentry-integration/src/: main.ts
examples/sentry-integration/src-tauri/: Cargo.toml  tauri.conf.json
examples/sentry-integration/src-tauri/src/: main.rs
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: .gitignore  Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
src/: api.rs  commands.rs  desktop.rs  lib.rs  mobile.rs  test.rs  tracing.rs
src/tracing/: init.js  init.rs  models.rs
