[package]
name = "tauri-plugin-sentry"
version = "0.1.0"
authors = [ "ZhaoTzuHsien" ]
description = "Tauri v2 plugin for sentry integration"
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-sentry"

[dependencies]
tauri = { version = "2.0.0-beta.23" }
serde = "1.0"
thiserror = "1.0"
sentry = "0.34.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.18", features = ["build"] }
sentry = { version = "0.34.0", features = ["test"] }
